# r-type-mirror

./: .gitignore  CMakeLists.txt  README.md  client.cpp  conan.py  launch_cmake.sh  main.cpp  network.sh  r-type.cpp  server.cpp
.github/workflows/: compilation_test.yaml  discord_message.yaml  python.yaml
Builders/: CameraBuilder.cpp  CameraBuilder.hpp  Director.cpp  Director.hpp  IEntityBuilder.hpp  PlayerBuilder.cpp  PlayerBuilder.hpp  ProjectilesBuilder.cpp  ProjectilesBuilder.hpp
Components/: Ai.cpp  Ai.hpp  Animation.cpp  Animation.hpp  Collision.cpp  Collision.hpp  Health.cpp  Health.hpp  IComponent.hpp  Movements.cpp  Movements.hpp  Object.cpp  Object.hpp  Position.cpp  Position.hpp  Projectiles.cpp  Projectiles.hpp  Text.cpp  Text.hpp
Entity/: Entity.cpp  Entity.hpp  Player.hpp  Projectiles.hpp
Factory/: BackgroundFactory.cpp  ButtonFactory.cpp  CameraFactory.cpp  EnnemyFactory.cpp  Factory.hpp  HeartFactory.cpp  PlayerFactory.cpp  PlayerFactory.hpp  ProjectilesFactory.cpp  ProjectilesFactory.hpp
System/: Audio.cpp  Audio.hpp  ButtonMenu.cpp  ButtonMenu.hpp  Core.cpp  Core.hpp  Draw.cpp  Draw.hpp  Input.cpp  Input.hpp  Keys.hpp  ScreenSize.hpp  Vector2Int.hpp
